# indousmcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  DATA_SOURCES.md  DEPLOY.md  Dockerfile  GROWTH.md  INDIAN_USA_DATA_PROMPT.md  README.md  SCALING.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  server.json
deploy/: Caddyfile
scripts/: check_claim_flow.py  check_events.py  check_owner_edit.py  check_portal.py  check_real.py  check_search.py  verify_live.py
src/indo_usa_mcp/: __init__.py  accounts.py  analytics.py  articles.py  assistant.py  cli.py  config.py  consulates.py  curation.py  db.py  demographics.py  describe.py  embeddings.py  enrich_llm.py  festivals.py  flyer.py  geocode.py  h1b.py  news.py  (+36 more)
tests/: test_accounts.py  test_accounts_phase1.py  test_admin_all_verticals.py  test_admin_content.py  test_admin_nav.py  test_admin_portal.py  test_admin_search.py  test_agent_detail.py  test_agent_discovery.py  test_agent_ops.py  test_agents.py  test_agents_runner.py  test_amenities.py  test_analytics.py  test_analytics_dashboards.py  test_analytics_tag.py  test_api.py  test_articles.py  test_aspects_phase4.py  test_auto_approve_and_digest.py  test_auto_reply.py  test_best_pages.py  test_browse_filters.py  test_browse_ux.py  test_canonical.py  test_category_tiles.py  test_chat_assistant.py  test_chat_cards.py  test_chat_contribute.py  test_chat_stream.py  test_claim_all_verticals.py  test_clean.py  test_collect.py  test_community.py  test_consulates.py  test_contact.py  test_content_pages.py  test_csp.py  test_curation.py  test_dedupe.py  (+89 more)
(+169 files in other folders)
