[project]
name = "indo-usa-mcp"
version = "0.1.0"
description = "Agent-first MCP server for the Indian-American diaspora (Phase 1: restaurants)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "stripe>=7.0",
    "itsdangerous>=2.0",
    "reverse_geocoder>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
semantic = ["fastembed>=0.3"]  # real 384-dim semantic embeddings (EMBEDDING_PROVIDER=fastembed)

[project.scripts]
diaspora = "indo_usa_mcp.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
indo_usa_mcp = ["sql/*.sql", "web/static/*"]
